# automerge-todomvc-http

./: README.md
react-todomvc/: README.md  index.tsx  package-lock.json  package.json  tsconfig.json  tsdx.config.js
react-todomvc/src/: App.tsx  Peers.tsx  Todos.tsx  automerge_hooks.ts  init_doc.tsx  todo.ts  todomvc.css
server/: README.md  server.py
vgtk-todomvc/: Cargo.toml  README.md
vgtk-todomvc/src/: app.rs  init_change.rs  items.rs  main.rs
