[package]
name = "todomvc"
version = "0.1.0"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2018"
license = "GPL-3.0+"

[dependencies]
automerge = {  git = "https://github.com/automerge/automerge-rs", rev = "24dcd9c1e646232850a9a422a9598ff18c350734" }
uuid = { version = "0.5.1" , features = ["v4"] }
vgtk = "0.3.0"
strum_macros = "0.20"
strum = "0.20"
pretty_env_logger = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3"
maplit = "1.0.2"
reqwest = { version = "0.11.0", features = ["blocking"] }
